--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -8,11 +8,15 @@ services:
     image: postgres
     restart: unless-stopped
     env_file: ./.env
+    volumes:
+      - ./volumes/data/backup_db:/backup_db
+      - ./volumes/data/postgres/data:/var/lib/postgresql/data
+      - ./volumes/data/postgres/config:/etc/postgresql
+      - ./volumes/data/postgres/logs:/var/log/postgresql
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
-      PGDATA: ./volumes/data/postgres:/var/lib/postgresql/data
     ports:
       - "${PORT_DB_HOST}:${PORT_DB_CONTAINER}"
     networks:
